--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-
-<p>My first paragraph.</p>
+<h2 id="patents">Patents</h2>
+<ol>
+<li>Patent 1</li>
+</ol>
+<h2 id="papers">Papers</h2>
+<ol>
+<li>Paper 1</li>
+</ol>
+<h2 id="talks">Talks</h2>
+<ol>
+<li>Talks at GNU: <img src="www.facebook.com" alt="Journey To Cloud"> </li>
+<li>Talk at Thoughtworks</li>
+</ol>
 
 </body>
 </html>
