--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </ol>
 <h2 id="talks">Talks</h2>
 <ol>
-<li>Talks at GNU: <img src="www.facebook.com" alt="Journey To Cloud"> </li>
+<li><p><a href="https://github.com/nanofaroque/personal_presentations/blob/main/Talk%20at%20Jinju.pdf">Talk at GNU(Gyeongsang National University), South Korea</a></p> </li>
 <li>Talk at Thoughtworks</li>
 </ol>
 
