--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h2 id="patents">Patents</h2>
 <ol>
-<li>Patent 1</li>
+<li><p><a href="https://patents.google.com/patent/US11792301B1/en">Parallelized automated creation of proxy manifests. US 11,792,301 B1</a></p></li>
 </ol>
 <h2 id="papers">Papers</h2>
 <ol>
