--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </ol>
 <h2 id="papers">Papers</h2>
 <ol>
-<li>Paper 1</li>
+<li><p><a href="https://patents.google.com/patent/US11792301B1/en">Dengue Fever Prediction</a></p></li>
+<li><p><a href="https://patents.google.com/patent/US11792301B1/en">Eyana: The SSD SimulatorExploring the Inner Workings of Solid-State Drives</a></p></li>
+<li><p><a href="https://patents.google.com/patent/US11792301B1/en">Eshyana: The Quantum Computer SimulatorExploring the Inner Workings of Quantum Computer</a></p></li>
 </ol>
 <h2 id="talks">Talks</h2>
 <ol>
