--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <h2 id="patents">Patents</h2>
 <ol>
 <li><p><a href="https://patents.google.com/patent/US11792301B1/en">Parallelized automated creation of proxy manifests. US 11,792,301 B1</a></p></li>
+<li><p><a href="https://patents.google.com/">Patent is filed by AWS on "Dynamic Routing of Application network traffic"(not public yet)</a></p></li>
+<li><p><a href="https://patents.google.com/">Patent is filed by AWS on "Tracing process in distributed systems"(not public yet)</a></p></li>
+<li><p><a href="https://patents.google.com/">Patent is filed by AWS on "Short lived certificate"(not public yet)</a></p></li>  
 </ol>
 <h2 id="papers">Papers</h2>
 <ol>
