--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <h2 id="talks">Talks</h2>
 <ol>
 <li><p><a href="https://github.com/nanofaroque/personal_presentations/blob/main/Talk%20at%20Jinju.pdf">Talk at GNU(Gyeongsang National University), South Korea</a></p> </li>
-<li><p><a href="https://github.com/nanofaroque/personal_presentations/blob/main/Talk%20at%20Jinju.pdf">Talk at Thoughtworks on "Cassandra internals"</a></p> </li>
+<li><p><a href="https://github.com/nanofaroque/personal_presentations/blob/main/cassandra_TW_presentation.pdf">Talk at Thoughtworks on "Cassandra internals"</a></p> </li>
 <li><p><a href="https://github.com/nanofaroque/personal_presentations/blob/main/Talk%20at%20Jinju.pdf">Talk at Thoughtworks on "Redshift</a></p> </li>
 </ol>
 
