--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </ol>
 <h2 id="papers">Papers</h2>
 <ol>
-<li><p><a href="https://www.google.com/">Eyana: The SSD SimulatorExploring the Inner Workings of Solid-State Drives</a></p></li>
+<li><p><a href="https://www.google.com/">Eyana: The SSD SimulatorExploring the Inner Workings of Solid-State Drives(Best paper award at KCS 2024)</a></p></li>
 <li><p><a href="https://www.google.com/">Eshyana: The Quantum Computer SimulatorExploring the Inner Workings of Quantum Computer</a></p></li>
 <li><p><a href="https://www.google.com/">Dengue Fever Prediction</a></p></li>
 </ol>
